--- a/workflow-templates/frappe-semgrep.yml
+++ b/workflow-templates/frappe-semgrep.yml
@@ -1,43 +1,25 @@
-name: Frappe Security Scan
+name: Linters
 
 on:
-  push:
-    branches: ["main", "develop"]
-  pull_request:
-    branches: ["main", "develop"]
+  pull_request: { }
 
 jobs:
-  semgrep:
-    name: Security Scan
+  linters:
+    name: Frappe Linter
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-      contents: read
-      
     steps:
-      # 1. Checkout your App code (like zatca_erpgulf)
-      - name: Checkout App Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      # 2. Get the Frappe Rules (This is what you saw in their repo)
-      - name: Checkout Frappe Rules
-        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          repository: frappe/semgrep-rules
-          path: frappe-rules
+          python-version: '3.10'
 
-      # 3. Run Semgrep (This automatically handles the 'pip install' for you)
-      - name: Run Semgrep
-        uses: returntocorp/semgrep-action@v1
-        with:
-          config: >-
-            ./frappe-rules/rules
-            auto
-          generateSarif: "1"
+      - name: Download Semgrep rules
+        run: git clone --depth 1 https://github.com/frappe/semgrep-rules.git frappe-semgrep-rules
 
-      # 4. Upload to the Security Tab (v4 is the latest)
-      - name: Upload Results
-        uses: github/codeql-action/upload-sarif@v4
-        with:
-          sarif_file: semgrep.sarif
-        if: always()
+      - name: Download semgrep
+        run: pip install semgrep
+
+      - name: Run Semgrep rules
+        run: semgrep ci --config ./frappe-semgrep-rules/rules
